--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -25,45 +25,46 @@ body {
     width: 100vw;
     padding: 2em 2em 0 0;
     background-color: $cream-white;
+}
 
-    /* Nav */
-    .navContainer {
-        position: fixed;
-        top: -60vh;
-        left: 0;
-        padding: 2em;
-        width: 100vw;
-        z-index: 2;
-        background-color: $blue-green;
+/* Nav */
+.navContainer {
+    position: fixed;
+    top: -60vh;
+    left: 0;
+    padding: 2em;
+    width: 100vw;
+    z-index: 2;
+    background-color: $blue-green;
 
-        -webkit-transition: top 0.6s ease;
-        -moz-transition: top 0.6s ease;
-        -ms-transition: top 0.6s ease;
-        -o-transition: top 0.6s ease;
-        transition: top 0.6s ease;
+    -webkit-transition: top 0.6s ease;
+    -moz-transition: top 0.6s ease;
+    -ms-transition: top 0.6s ease;
+    -o-transition: top 0.6s ease;
+    transition: top 0.6s ease;
 
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
-        &.expanded {
-            top: 0vw;
-        }
+    &.expanded {
+        top: 0vw;
+    }
 
-        &__linkList {
-            margin: 3em 2em;
-            list-style-type: none;
-            text-align: center;
+    &__linkList {
+        margin: 3em 2em;
+        list-style-type: none;
+        text-align: center;
 
-            li {
-                margin: 2em 0;
-                a {
-                    font: $base $mono;
-                    text-decoration: none;
-                    color: $cream-white;
-                }
+        li {
+            margin: 2em 0;
+            a {
+                font: $base $mono;
+                text-decoration: none;
+                color: $cream-white;
             }
         }
     }
 }
+
 
 main {
     padding: 0 2em;
@@ -122,6 +123,10 @@ main {
         content: ""; 
         position: absolute; 
         top: -2px; left: 0; right: 0;
+    }
+
+    &__projectContainer {
+        padding: 1em 0;
     }
 
     &__projectContainer:not(:last-child) {
@@ -204,8 +209,9 @@ main {
 /* Contact */
 .contact {
     display: grid;
-    grid-template-rows: 85% 15%;
+    grid-template-rows: 90% 10%;
     height: 90vh;
+    margin: 2em;
     place-items: center;
     text-align: center;
 
@@ -222,5 +228,44 @@ main {
         margin: 1em 0;
         font: $small $mono;
         color: $blue-grey;
+    }
+}
+
+/* MEDIA QUERIES */
+@media screen and (min-width: 768px) {
+    main {
+        padding: 0 7em;
+    }
+}
+
+@media screen and (min-width: 820px) {
+    main {
+        padding: 0 7em;
+    }
+
+    .navContainer {
+        top: 0;
+        padding: 2em 4em;
+        background-color: $cream-white;
+        filter: none;
+
+        &__linkList {
+            display: flex;
+            justify-content: flex-end;
+            margin: 0;
+            text-align: right;
+
+            li {
+                margin: 0 0 0 2em;
+
+                a {
+                    color: $blue-green;
+                }
+            }
+        }
+    }
+
+    .contact {
+        grid-template-rows: 95% 5%;
     }
 }
