--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,7 @@
   border: 1px solid #018192;
   border-radius: 5px;
   cursor: pointer;
+  text-decoration: none;
   background: none;
   font: 18px "Inconsolata", sans-serif;
   color: #018192;
@@ -83,6 +84,9 @@
 }
 .cmp-externalLinks.contactMe {
   text-align: center;
+}
+.cmp-externalLinks.fixed {
+  display: none;
 }
 
 /* == Header == */
@@ -110,6 +114,36 @@
   color: #64829A;
 }
 
+/* == Media Queries == */
+@media screen and (min-width: 820px) {
+  .cmp-burgerIconContainer {
+    display: none;
+  }
+
+  .cmp-externalLinks.nav {
+    display: none;
+  }
+
+  .cmp-externalLinks.fixed {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    bottom: 0;
+    right: 2em;
+  }
+  .cmp-externalLinks.fixed::after {
+    display: inline-block;
+    height: 10.5em;
+    width: 100%;
+    margin: 0 0 0 -1.2em;
+    z-index: -1;
+    content: "";
+    border-right: 0.5px solid #018192;
+  }
+  .cmp-externalLinks.fixed a {
+    margin-bottom: 1em;
+  }
+}
 /* Global */
 * {
   -webkit-box-sizing: border-box;
@@ -137,9 +171,10 @@ body {
   width: 100vw;
   padding: 2em 2em 0 0;
   background-color: #FFFEFA;
-  /* Nav */
 }
-.rootHeader .navContainer {
+
+/* Nav */
+.navContainer {
   position: fixed;
   top: -60vh;
   left: 0;
@@ -154,18 +189,18 @@ body {
   transition: top 0.6s ease;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
-.rootHeader .navContainer.expanded {
+.navContainer.expanded {
   top: 0vw;
 }
-.rootHeader .navContainer__linkList {
+.navContainer__linkList {
   margin: 3em 2em;
   list-style-type: none;
   text-align: center;
 }
-.rootHeader .navContainer__linkList li {
+.navContainer__linkList li {
   margin: 2em 0;
 }
-.rootHeader .navContainer__linkList li a {
+.navContainer__linkList li a {
   font: 18px "Inconsolata", sans-serif;
   text-decoration: none;
   color: #FFFEFA;
@@ -223,6 +258,9 @@ main {
   top: -2px;
   left: 0;
   right: 0;
+}
+.featuredProject__projectContainer {
+  padding: 1em 0;
 }
 .featuredProject__projectContainer:not(:last-child) {
   border-bottom: 0.5px solid #64829A;
@@ -292,8 +330,9 @@ main {
 /* Contact */
 .contact {
   display: grid;
-  grid-template-rows: 85% 15%;
+  grid-template-rows: 90% 10%;
   height: 90vh;
+  margin: 2em;
   place-items: center;
   text-align: center;
 }
@@ -308,6 +347,41 @@ main {
   margin: 1em 0;
   font: 12px "Inconsolata", sans-serif;
   color: #64829A;
+}
+
+/* MEDIA QUERIES */
+@media screen and (min-width: 768px) {
+  main {
+    padding: 0 7em;
+  }
+}
+@media screen and (min-width: 820px) {
+  main {
+    padding: 0 7em;
+  }
+
+  .navContainer {
+    top: 0;
+    padding: 2em 4em;
+    background-color: #FFFEFA;
+    filter: none;
+  }
+  .navContainer__linkList {
+    display: flex;
+    justify-content: flex-end;
+    margin: 0;
+    text-align: right;
+  }
+  .navContainer__linkList li {
+    margin: 0 0 0 2em;
+  }
+  .navContainer__linkList li a {
+    color: #018192;
+  }
+
+  .contact {
+    grid-template-rows: 95% 5%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
